<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:layout_margin="@dimen/fifteenDip"
    android:padding="@dimen/fifteenDip">

    <TextView
        android:textSize="@dimen/sixteenDip"
        android:textColor="@color/black"
        android:id="@+id/dialog_title"
        android:text="@string/do_you_want"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_title"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_action"
            style="@style/customTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/tenDip"
            android:gravity="start"
            android:padding="@dimen/fiveDip"
            android:singleLine="false"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sixteenSip"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/ok_action"
            style="@style/customTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fiveDip"
            android:gravity="start"
            android:padding="@dimen/fiveDip"
            android:singleLine="false"
            android:text="@string/continue_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/sixteenSip"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>
</RelativeLayout>